--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header></app-header>
-<app-body></app-body>
-<app-footer></app-footer>
+<div class="wrapper">
+    <app-header></app-header>
+    <app-main></app-main>
+    <app-footer></app-footer>
+</div>
