--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,8 @@
+*{
+    font-family: Poppins;
+}
 .wrapper{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    app-main{
-        flex:1;
-    }
-    app-footer{
-        flex-shrink: 0;
-    }
 }
