--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,24 @@
 <header>
-    <h2>header</h2>
+    <nav>
+        <a href="">
+        <div class="logo">
+            <span class="logoIcon"></span>
+            <div class="title">
+                Furniro
+            </div>
+        </div>
+        </a>
+        <ul>
+            <li class="namedLink"><a href="">Home</a></li>  
+            <li class="namedLink"><a href="">Shop</a></li>
+            <li class="namedLink"><a href="">About</a></li>
+            <li class="namedLink"><a href="">Contact</a></li>
+        </ul>
+        <ul class="linkIconsList">
+            <li><a href=""><span class="userIcon linkIcon"></span></a></li>
+            <li><a href=""><span class="searchIcon linkIcon"></span></a></li>
+            <li><a href=""><span class="heartIcon linkIcon"></span></a></li>
+            <li><a href=""><span class="cartIcon linkIcon"></span></a></li>
+        </ul>
+    </nav>
 </header>
