--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,37 @@
 <footer>
-    <h2>footer</h2>
+    <div class="row">
+        <div class="col">
+            <p class="title">Funiro.</p>
+            <p class="subtitle location">
+                400 University Drive Suite 200 Coral Gables,
+                <br/>
+                FL 33134 USA
+            </p>
+        </div>
+        <div class="col"><p class="subtitle">Links</p>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Shop</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+        </div>
+        <div class="col"><p class="subtitle">Help</p>
+        <ul>
+            <li><a href="">Payment Options</a></li>
+            <li><a href="">Returns</a></li>
+            <li><a href="">Privacy Policles</a></li>
+        </ul>
+        </div>
+        <div class="col">
+            <p class="subtitle">Newsletter</p>
+            <form >
+                <input type="text" placeholder="Enter Your Email Address">
+                <input type="submit" value="SUBSCRIBE">
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <p>2023 furino. All rights reverved</p>
+    </div>
 </footer>
