--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,3 +1,94 @@
-:host{
+:host {
     flex-shrink: 0;
+}
+
+footer {
+    padding: 48px 100px 38px 100px;
+
+    .row {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        &:first-child {
+            border-bottom: 1px solid #D9D9D9;
+        }
+
+        &:last-child {
+            margin-top: 35px;
+        }
+
+        .col {
+            display: flex;
+            flex-direction: column;
+            p{
+                margin: 0px;
+            }
+            ul {
+                padding: 0px;
+                margin-top: 50px;
+
+                li {
+                    list-style-type: none;
+                    margin-top: 46px;
+
+                    &:first-child {
+                        margin-top: 0px;
+                    }
+
+                    a {
+                        color: black;
+                        font-weight: 500;
+                    }
+                }
+            }
+
+            .title {
+                color: #000;
+                font-family: Poppins-Bold;
+                font-size: 24px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+            }
+
+            .subtitle {
+                color: #9F9F9F;
+                &.location{
+                    margin-top: 50px;
+                }
+            }
+
+            form {
+                margin-top: 53px;
+
+                input {
+                    border: 0px;
+                    border-bottom: 1px solid black;
+
+                    font-size: 14px;
+                    &:last-child {
+                        margin-left: 11px;
+                    }
+
+                    &[type="text"] {
+                        width: 200px;
+                        &:focus {
+                            outline: none;
+                        }
+
+                        &::placeholder {
+                            color: #9F9F9F;
+                        }
+                    }
+
+                    &[type="submit"] {
+                        padding: 0px;
+                    }
+                }
+            }
+        }
+
+
+    }
 }
