add breadcrumb navigation

--- a/src/app/icons.scss
+++ b/src/app/icons.scss
@@ -29,3 +29,10 @@
 .userIcon {
     @include icon("user.svg")
 }
+
+.arrowIcon {
+    &.right {
+        @include icon("arrow.right.svg");
+    }
+
+}
