--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,13 @@
 <main>
-    <h2>body</h2>
+    <div class="row crumbBox" *ngIf="true">
+        <span class="logoIcon"></span>
+        <p class="title">Product Comparison</p>
+        <nav class="crumbs">
+            <ol>
+                <li class="crumb"><a href="#">Bikes</a> <i class="arrowIcon right"></i></li>
+                <li class="crumb"><a href="#">BMX</a> <i class="arrowIcon right"></i></li>
+                <li class="crumb">Jump Bike 3000</li>
+            </ol>
+        </nav>
+    </div>
 </main>
