--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,3 +1,69 @@
-:host{
-    flex:1;
+:host {
+    flex: 1;
+}
+
+.crumbBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    height: 316px;
+    background-image: url('../images/Rectangle\ 1.png');
+    background-position: center;
+    background-size: cover;
+
+    mask-image:
+        linear-gradient(to top, rgba(0, 0, 0, 1.0) 95%, transparent 100%);
+
+    .logoIcon {
+        display: block;
+        width: 50px;
+        height: 32px;
+    }
+
+    .title {
+        margin: 0px;
+        font-size: 48px;
+        font-weight: 600;
+    }
+
+    nav.crumbs {
+
+        list-style-type: none;
+
+        .crumb {
+
+            font-weight: 600;
+
+
+            display: inline-flex;
+            flex-direction: row;
+            align-items: center;
+            position: relative;
+
+
+            &:last-child {
+                font-weight: 300;
+
+                &::after {
+                    content: '';
+                    margin-right: 0px;
+                }
+            }
+
+            a {
+                color: black;
+            }
+            .arrowIcon {
+                margin-left: 6px;
+                margin-right: 6px;
+                width: 20px;
+                height: 20px;
+                background-color: black;
+            }
+        }
+
+    }
+
 }
