add home page with discover and browse the range frames

--- a/src/app/icons.scss
+++ b/src/app/icons.scss
@@ -1,5 +1,5 @@
 @mixin icon($filename) {
-    mask-image: url("./icons/#{$filename}");
+    mask-image: url("/assets/icons/#{$filename}");
 }
 
 [class$="Icon"] {
