--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,6 +1,11 @@
 :host {
     flex: 1;
 }
+$creamy: #F9F1E7;
+$black: black;
+$gray: #9F9F9F;
+
+
 
 .crumbBox {
     display: flex;
@@ -9,7 +14,7 @@
     align-items: center;
 
     height: 316px;
-    background-image: url('../images/Rectangle\ 1.png');
+    background-image: url(/assets/images/Rectangle1.png);
     background-position: center;
     background-size: cover;
 
@@ -53,17 +58,63 @@
             }
 
             a {
-                color: black;
+                color: $black;
             }
             .arrowIcon {
                 margin-left: 6px;
                 margin-right: 6px;
                 width: 20px;
                 height: 20px;
-                background-color: black;
+                background-color: $black;
             }
         }
 
     }
 
+}
+.smallCrumbBox{
+    background-color: $creamy;
+    height: 100px;
+    padding-left: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    nav.crumbs {
+        padding: 0px;
+        list-style-type: none;
+
+        .crumb {
+            height: 37px;
+            font-weight: 400;
+
+
+            display: inline-flex;
+            flex-direction: row;
+            align-items: center;
+            position: relative;
+
+
+            &:last-child {
+                font-weight: 300;
+                border-left: 2px solid $gray;
+                padding-left: 34px;
+                &::after {
+                    content: '';
+                    margin-right: 0px;
+                }
+            }
+
+            a {
+                color: $gray;
+            }
+            .arrowIcon {
+                margin-left: 14px;
+                margin-right: 24px;
+                width: 20px;
+                height: 20px;
+                background-color: $black;
+            }
+        }
+
+    }
 }
