--- a/src/app/main/defaultUser/home/home.component.scss
+++ b/src/app/main/defaultUser/home/home.component.scss
@@ -1,6 +1,7 @@
 $primary: #B88E2F;
 $secondary: #FFF3E3;
 $gray: #666;
+$secondaryGray: #3A3A3A;
 $transitionDuration: 0.3s;
 
 .row {
@@ -77,6 +78,7 @@ $transitionDuration: 0.3s;
 
             a {
                 margin-left: 20px;
+
                 &:first-child {
                     margin-left: 0px;
                 }
@@ -93,6 +95,21 @@ $transitionDuration: 0.3s;
                     }
                 }
 
+                .imgWrapper {
+                    position: relative;
+                    width: 380px;
+                    height: 480px;
+                    border-radius: 8px;
+                    overflow: hidden;
+                    transition-duration: $transitionDuration;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+
                 p {
                     margin: 0px;
                     margin-top: 20px;
@@ -102,9 +119,32 @@ $transitionDuration: 0.3s;
                 }
             }
 
-            .imgWrapper {
-                transition-duration: $transitionDuration;
-            }
+
+        }
+    }
+
+    &.productList {
+        margin-top: 56px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .title1 {
+            color: $secondaryGray;
+            margin: 0px;
+            margin-bottom: 32px;
+        }
+
+        .button {
+            margin-top: 32px;
+            width: 245px;
+            height: 48px;
+            border: 1px solid $primary;
+            color: $primary;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 16px;
+            font-weight: 600;
         }
     }
 
@@ -113,6 +153,7 @@ $transitionDuration: 0.3s;
         font-size: 40px;
         font-weight: 700;
         line-height: 120%;
+        text-align: center;
     }
 
     .title2 {
