--- a/src/app/main/defaultUser/home/home.component.scss
+++ b/src/app/main/defaultUser/home/home.component.scss
@@ -2,6 +2,7 @@ $primary: #B88E2F;
 $secondary: #FFF3E3;
 $gray: #666;
 $secondaryGray: #3A3A3A;
+$gray-2: #616161;
 $transitionDuration: 0.3s;
 
 .row {
@@ -128,6 +129,7 @@ $transitionDuration: 0.3s;
         display: flex;
         flex-direction: column;
         align-items: center;
+
         .title1 {
             color: $secondaryGray;
             margin: 0px;
@@ -145,6 +147,43 @@ $transitionDuration: 0.3s;
             align-items: center;
             font-size: 16px;
             font-weight: 600;
+        }
+    }
+
+    &.inspiration {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        margin-top: 113px;
+        .titleSide {
+            width: 422px;
+            margin-right: 42px;
+        }
+
+        .title1 {
+            margin: 0px;
+            text-align: left;
+            color: $secondaryGray;
+        }
+
+        .subtitle {
+            margin-top: 7px;
+            margin: 0px;
+            font-size: 16px;
+            font-weight: 500;
+            line-height: 150%;
+        }
+
+        .button {
+            margin-top: 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 176px;
+            height: 48px;
+            background-color: $primary;
+            color: white;
         }
     }
 
