--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,17 +18,21 @@
     font-family: 'Poppins';
     src: url('./fonts/Poppins-Regular.ttf');
 }
+
 @font-face {
     font-family: 'Poppins-Bold';
     src: url('./fonts/Poppins-Bold.ttf');
 }
+
 body {
     padding: 0px;
     margin: 0px;
 }
-a{
+
+a {
     color: black;
 }
+
 a:link {
     text-decoration: none;
 }
@@ -45,7 +49,171 @@ a:active {
     text-decoration: none;
 }
 
-.clickable{
+.clickable {
     cursor: pointer;
     user-select: none;
+}
+
+// Swiper ---------
+// Should be styled here
+$gray: #616161;
+$lightGray: #D8D8D8;
+$primary: #B88E2F;
+$white: #FFFFFF;
+
+.swiper {
+    padding-right: 50px;
+
+    img {
+        object-fit: cover;
+    }
+
+    &.primary {
+
+        width: 448px;
+        height: 486px;
+        overflow-y: visible;
+
+        .swiper-pagination {
+            position: absolute;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            text-align: left;
+            bottom: -50px;
+            left: 0px;
+
+            .swiper-pagination-bullet {
+                position: relative;
+                width: 27px;
+                height: 27px;
+                border-radius: 50%;
+                background-color: transparent;
+                transition-duration: 0.2s;
+                border: 1px solid transparent;
+                opacity: 1;
+                &::after {
+
+                    content: '';
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    display: block;
+                    width: 11px;
+                    height: 11px;
+                    border-radius: 50%;
+                    background-color: $lightGray;
+                }
+
+                &.swiper-pagination-bullet-active {
+                    border: 1px solid $primary;
+
+                    &::after {
+                        background-color: $primary;
+                    }
+                }
+            }
+        }
+
+        .swiper-button-next {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: absolute;
+            width: 48px;
+            height: 48px;
+            right: 55px;
+            border-radius: 50%;
+            filter: drop-shadow(0px 4px 14px rgba(0, 0, 0, 0.16));
+            background-color: $white;
+
+            &::after {
+                display: none;
+            }
+
+            .arrowIcon.right {
+                width: 28px;
+                height: 28px;
+                background-color: $primary;
+                mask-size: cover;
+            }
+        }
+
+
+    }
+
+    &.secondary {
+        width: 404px;
+        height: 582px;
+
+        .swiper-slide {
+            position: relative;
+
+            .slide-content {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+                bottom: 24px;
+                left: 24px;
+                width: 217px;
+                height: 130px;
+                background-color: rgba(255, 255, 255, 0.72);
+
+                .slideInfo {
+                    display: inline-flex;
+                    flex-direction: row;
+                    align-items: center;
+                    color: $gray;
+
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 500;
+
+                    .dashIcon {
+                        margin-left: 8px;
+                        margin-right: 8px;
+                        display: block;
+                        width: 27px;
+                        height: 2px;
+                        background-color: $gray;
+
+                    }
+
+
+                }
+
+                .title {
+                    font-size: 28px;
+                    font-style: normal;
+                    font-weight: 600;
+                }
+
+                .button {
+                    position: absolute;
+                    width: 48px;
+                    height: 48px;
+                    background-color: $primary;
+                    right: -48px;
+                    bottom: 0px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    .arrowIcon.right {
+                        mask-image: url("/assets/icons/arrow.line.right.svg");
+                        display: block;
+                        -webkit-mask-size: cover;
+                        mask-size: cover;
+                        background-color: $white;
+                        width: 24px;
+                        height: 24px;
+                    }
+                }
+            }
+        }
+
+    }
 }
