finish home page design

--- a/src/app/main/defaultUser/home/home.component.html
+++ b/src/app/main/defaultUser/home/home.component.html
@@ -51,7 +51,7 @@
 <section class="row inspiration">
     <div class="titleSide">
         <h1 class="title1">
-            50+ Beautiful rooms <br/>
+            50+ Beautiful rooms <br />
             inspiration
         </h1>
         <p class="subtitle">
@@ -64,5 +64,40 @@
     <div class="slider">
         <app-home-slider [slides]=this.slides>
         </app-home-slider>
+    </div>
+</section>
+<section class="row hashtag">
+    <h2 class="subtitle">
+        Share your setup with
+    </h2>
+    <h1 class="title1">
+        #FuniroFurniture
+    </h1>
+    <div class="collage">
+        <div class="row">
+            <div class="col">
+                <div class="row top">
+                    <img src="assets/images/collage/Rectangle 36.png" alt="" style="width: 274px; height: 382px;">
+                    <img src="assets/images/collage/Rectangle 38.png" alt="" style="width: 451px; height: 312px;">
+                </div>
+                <div class="row bottom">
+                    <img src="assets/images/collage/Rectangle 37.png" alt="" style="width: 381px; height: 323px;">
+                    <img src="assets/images/collage/Rectangle 39.png" alt="" style="width: 344px; height: 242px;">
+                </div>
+            </div>
+            <div class="col">
+                <img src="assets/images/collage/Rectangle 40.png" alt="" style="width: 295px; height: 392px;">
+            </div>
+            <div class="col">
+                <div class="row top">
+                    <img src="assets/images/collage/Rectangle 43.png" alt="" style="width: 290px; height: 348px;">
+                    <img src="assets/images/collage/Rectangle 45.png" alt="" style="width: 425px; height: 433px;">
+                </div>
+                <div class="row bottom">
+                    <img src="assets/images/collage/Rectangle 41.png" alt="" style="width: 178px; height: 242px;">
+                    <img src="assets/images/collage/Rectangle 44.png" alt="" style="width: 258px; height: 196px;">
+                </div>
+            </div>
+        </div>
     </div>
 </section>
