add user-state service and small style fixes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,10 +9,10 @@
         </div>
         </a>
         <ul>
-            <li class="namedLink"><a href="">Home</a></li>  
-            <li class="namedLink"><a href="">Shop</a></li>
-            <li class="namedLink"><a href="">About</a></li>
-            <li class="namedLink"><a href="">Contact</a></li>
+            <li class="namedLink"><a routerLink="/">Home</a></li>  
+            <li class="namedLink"><a routerLink="/Shop">Shop</a></li>
+            <li class="namedLink"><a routerLink="/About">About</a></li>
+            <li class="namedLink"><a routerLink="/Contact">Contact</a></li>
         </ul>
         <ul class="linkIconsList">
             <li><a href=""><span class="userIcon linkIcon"></span></a></li>
