--- a/src/app/main/defaultUser/home/home.component.scss
+++ b/src/app/main/defaultUser/home/home.component.scss
@@ -190,6 +190,7 @@ section.row {
 
     &.hashtag {
         margin-top: 111px;
+        margin-bottom: 50px;
         .subtitle {
             font-size: 20px;
             font-style: normal;
