--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -4,7 +4,7 @@
 
 footer {
     padding: 48px 100px 38px 100px;
-
+    border-top: 1px solid rgba(0,0,0,0.17);
     .row {
         display: flex;
         flex-direction: row;
