--- a/src/app/icons.scss
+++ b/src/app/icons.scss
@@ -48,3 +48,15 @@
     width: 27px;
     height: 2px;
 }
+.tropyIcon{
+    @include icon("/warranty/trophy.svg")
+}
+.shippingIcon{
+    @include icon("/warranty/shipping.svg")
+}
+.guaranteeIcon{
+    @include icon("/warranty/guarantee.svg")
+}
+.customerSupportIcon{
+    @include icon("/warranty/customer-support.svg")
+}
