--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -20,7 +20,7 @@
         </nav>
     </div>
     <router-outlet></router-outlet>
-    <div class="row warranty" *ngIf="warrantyBar">
+    <div class="row warranty" *ngIf="isWarrantyBarActive">
         <div class="item">
             <i class="icon tropyIcon"></i>
             <div class="text">
