--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,34 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$furnitureShop-primary: mat.define-palette(mat.$indigo-palette);
+$furnitureShop-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$furnitureShop-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$furnitureShop-theme: mat.define-light-theme((color: (primary: $furnitureShop-primary,
+                accent: $furnitureShop-accent,
+                warn: $furnitureShop-warn,
+            )));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($furnitureShop-theme);
+
 @font-face {
     font-family: 'Montserrat';
     src: url('./fonts/Montserrat-Regular.ttf');
@@ -92,6 +123,7 @@ $white: #FFFFFF;
                 transition-duration: 0.2s;
                 border: 1px solid transparent;
                 opacity: 1;
+
                 &::after {
 
                     content: '';
@@ -216,4 +248,93 @@ $white: #FFFFFF;
         }
 
     }
+}
+
+//mat-select override
+.mat-select {
+    background-color: white;
+
+    &.changed {
+        .mat-mdc-select-value {
+            color: black;
+        }
+    }
+
+    .mat-mdc-select-value {
+
+        color: #9F9F9F;
+    }
+
+    .mat-mdc-select-arrow-wrapper {
+        display: none !important;
+    }
+
+    &.productRange {
+        .mat-mdc-select-value {
+            text-align: center;
+        }
+
+        .mat-mdc-select-trigger {
+            width: 55px;
+            height: 55px;
+
+        }
+
+
+
+
+
+    }
+
+    &.orderBy {
+        .mat-mdc-select-value {
+            margin-left: 30px;
+        }
+
+        .mat-mdc-select-trigger {
+            width: 188px;
+            height: 55px;
+
+        }
+    }
+}
+
+.mat-pseudo-checkbox {
+    display: none !important;
+}
+
+.mat-mdc-option.mdc-list-item {
+    text-align: center;
+
+}
+
+.ng-trigger {
+    .mat-mdc-option.mdc-list-item--selected:not(.mdc-list-item--disabled) {
+        .mdc-list-item__primary-text {
+            color: black;
+
+        }
+    }
+
+    .mat-mdc-option {
+        justify-content: center;
+
+        .mdc-list-item__primary-text {
+
+            font-family: Poppins;
+            font-size: 20px;
+            font-weight: 400;
+            margin-right: 0px;
+        }
+    }
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
