--- a/src/app/main/defaultUser/shop/shop.component.scss
+++ b/src/app/main/defaultUser/shop/shop.component.scss
@@ -95,7 +95,7 @@
             display: flex;
             flex-direction: row;
             justify-content: center;
-            
+            margin-top: 70px;
             .pages{
                 position: relative;
             }
