add sticky position to header

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,9 @@
+:host{
+    position: sticky;
+    top: 0px;
+    background-color: white;
+    z-index: 10;
+}
 nav {
     padding: 30px 100px 34px 54px;
     display: flex;
