finish design part of product page

--- a/src/app/icons.scss
+++ b/src/app/icons.scss
@@ -77,3 +77,12 @@
 .starIcon{
     @include icon("star.svg")
 }
+.facebookIcon{
+    @include icon("/socialMedia/facebook-filled.svg")
+}
+.linkedinIcon{
+    @include icon("/socialMedia/linkedin-filled.svg")
+}
+.twitterIcon{
+    @include icon("/socialMedia/twitter-filled.svg")
+}
