--- a/src/app/main/defaultUser/product/product.component.scss
+++ b/src/app/main/defaultUser/product/product.component.scss
@@ -1,5 +1,7 @@
 :host {}
 
+$primary: #B88E2F;
+
 .row {
     display: flex;
     flex-direction: row;
@@ -7,6 +9,7 @@
     &.productAbout {
         margin-top: 32px;
         justify-content: center;
+        padding-bottom: 67px;
 
         .leftSide {
             margin-right: 105px;
@@ -176,6 +179,7 @@
                 justify-content: center;
                 padding-bottom: 60px;
                 border-bottom: 1px solid #D9D9D9;
+
                 .quantity {
                     height: 64px;
                     display: inline-flex;
@@ -199,7 +203,7 @@
 
                     input {
                         font-family: poppins;
-                        width: 50px;
+                        width: 63px;
                         font-size: 16px;
                         font-weight: 500;
                         text-align: center;
@@ -226,6 +230,153 @@
                     }
                 }
             }
+
+            .bottomInfo {
+                ul {
+                    list-style: none;
+                    padding: 0;
+                    display: flex;
+                    flex-direction: column;
+
+                    li {
+                        display: inline-flex;
+                        align-items: center;
+                        margin-top: 12px;
+
+                        &:first-child {
+                            margin-top: 0px;
+                        }
+
+                        span {
+                            display: inline-block;
+                            font-size: 16px;
+                            font-weight: 400;
+                            color: #9F9F9F;
+
+                            &:first-child {
+                                width: 81px;
+                            }
+
+                            &:last-child {
+                                margin-left: 12px;
+                            }
+
+                            &.socialMedia {
+                                display: inline-flex;
+                                align-items: center;
+
+                                i {
+                                    display: inline-block;
+                                    width: 20px;
+                                    height: 20px;
+                                    margin-left: 25px;
+
+                                    &.twitterIcon {
+                                        width: 25px;
+                                        height: 25px;
+                                    }
+
+                                    &:first-child {
+                                        margin-left: 0px;
+                                    }
+                                }
+                            }
+                        }
+
+                    }
+                }
+            }
+        }
+    }
+
+    &.more {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 48px;
+        padding-bottom: 65px;
+        border-top: 1px solid #D9D9D9;
+        .folderTitles {
+            display: inline-flex;
+
+            .title {
+                color: #9F9F9F;
+                font-size: 24px;
+                font-weight: 500;
+
+                &.active {
+                    color: #000000;
+                }
+
+                margin-left: 52px;
+
+                &:first-child {
+                    margin-left: 0px;
+                }
+            }
+        }
+
+        .folders {
+            .folder {
+                color: #9F9F9F;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                .text {
+                    width: 1026px;
+                }
+
+                .images {
+                    display: flex;
+                    flex-direction: row;
+                    margin-top: 26px;
+                    .imageWrapper {
+                        width: 605px;
+                        height: 348px;
+                        background-color: #F9F1E7;
+                        border-radius: 10px;
+                        overflow: hidden;
+                        margin-left: 30px;
+                        &:first-child{
+                            margin-left: 0px;
+                        }
+                        img{
+                            object-fit: cover;
+                            width: 100%;
+                            height: 100%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    &.related {
+        padding-top: 55px;
+        border-top: 1px solid #D9D9D9;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 92px;
+
+        .title {
+            font-size: 36px;
+            font-weight: 600;
+            margin-bottom: 26px;
+            margin-top: 0px;
+        }
+
+        .showMore {
+            margin-top: 44px;
+            width: 245px;
+            height: 48px;
+            border: 1px solid $primary;
+            color: $primary;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 16px;
+            font-weight: 600;
         }
     }
 }
