add cart dialog window

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,8 +17,8 @@
         <ul class="linkIconsList">
             <li><a href=""><span class="userIcon linkIcon"></span></a></li>
             <li><a href=""><span class="searchIcon linkIcon"></span></a></li>
-            <li><a href=""><span class="heartIcon linkIcon"></span></a></li>
-            <li><a href=""><span class="cartIcon linkIcon"></span></a></li>
+            <li><span class="heartIcon linkIcon"></span></li>
+            <li><span class="cartIcon linkIcon" (click)="OpenCartDialog()"></span></li>
         </ul>
     </nav>
 </header>
