remove crumb margin for big crumb box

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -40,6 +40,7 @@ $gray-3: #898989;
         list-style-type: none;
         ol{
             padding-left: 0px;
+            margin: 0px;
         }
         .crumb {
 
