--- a/src/app/icons.scss
+++ b/src/app/icons.scss
@@ -92,3 +92,6 @@
 .cartremoveproductIcon{
     @include icon("/cart/removeProduct.svg")
 }
+.carttrashbinIcon{
+    @include icon("/cart/trashBin.svg")
+}
