--- a/src/app/main/defaultUser/cart/cart.component.html
+++ b/src/app/main/defaultUser/cart/cart.component.html
@@ -1,40 +1,48 @@
 <div class="products">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="cartProducts" class="mat-elevation-z8">
 
-        <!--- Note that these columns can be defined in any order.
+    <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
-      
-        <!-- Position Column -->
-        <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-        </ng-container>
-      
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
-          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-        </ng-container>
-      
-        <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-          <th mat-header-cell *matHeaderCellDef> Weight </th>
-          <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-        </ng-container>
-      
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef> Symbol </th>
-          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-        </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="imageURL">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <div class="imageWrapper">
+          <img src="{{element.imageURL}}" alt="">
+        </div>
+      </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Product </th>
+      <td mat-cell *matCellDef="let element" class="col-product"> {{element.name}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef> Price </th>
+      <td mat-cell *matCellDef="let element" class="col-price">$ {{element.price | numberWithCommas}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="quantity">
+      <th mat-header-cell *matHeaderCellDef> Quantity </th>
+      <td mat-cell *matCellDef="let element" class="centered">
+        <input class="quantity" type="number" min="1" max="99" step="1" value="{{element.quantity}}" (keyup)="ChangeProductQuantity($any($event.target).value, element.id)"/> </td>
+    </ng-container>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>  </th>
+      <td mat-cell *matCellDef="let element"> <i class="carttrashbinIcon clickable" (click)="RemoveProduct(element.id)"></i> </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 </div>
 <div class="cartTotals">
-    <h2 class="title">Cart Totals</h2>
-    <span class="subtotal"><span class="label">Subtotal</span> <span class="value">Rs. 250,000.00</span></span>
-    <span class="total"><span class="label">Total</span> <span class="value">Rs. 250,000.00</span></span>
-    <div class="button clickable">Check Out</div>
+  <h2 class="title">Cart Totals</h2>
+  <span class="subtotal"><span class="label">Subtotal</span> <span class="value">$ {{subtotal | numberWithCommas }}</span></span>
+  <span class="total"><span class="label">Total</span> <span class="value">$ {{subtotal | numberWithCommas}}</span></span>
+  <div class="button clickable">Check Out</div>
 </div>
