finish checkout page

--- a/src/app/header/cart-dialog/cart-dialog.component.html
+++ b/src/app/header/cart-dialog/cart-dialog.component.html
@@ -30,7 +30,7 @@
     </div>
     <div class="actions">
       <div class="action clickable" [routerLink]="'Cart'" mat-dialog-close>Cart</div>
-      <div class="action clickable">Checkout</div>
+      <div class="action clickable" [routerLink]="'Checkout'" mat-dialog-close>Checkout</div>
       <div class="action clickable">Comparison</div>
     </div>
 
