--- a/src/app/main/defaultUser/contact/contact.component.scss
+++ b/src/app/main/defaultUser/contact/contact.component.scss
@@ -126,6 +126,8 @@
                 height: 55px;
                 border-radius: 5px;
                 background-color: #B88E2F;
+                outline: none;
+                border: none;
 
                 display: flex;
                 align-items: center;
