change success snackbar color

--- a/src/app/snackbar/snackbar.component.scss
+++ b/src/app/snackbar/snackbar.component.scss
@@ -43,9 +43,9 @@
         }
     }
     &.success{
-        color: #88D453;
+        color: #75BD4B;
         .icon{
-            background-color: #88D453;
+            background-color: #75BD4B;
         }
     }
 }
